Bug 1698609: Use shape from template object when cloning RegExp r=tcampbell

If we parse offthread, then the shape of the template object will be allocated in a separate zone with a different initialShapes set. `CodeGenerator::visitRegExp` will [create a new regexp using the shape of the template object](https://searchfox.org/mozilla-central/rev/4e87b5392eafe1f1d49017e76f7317b06ec0b1d8/js/src/jit/CodeGenerator.cpp#1794-1795). To remain consistent and avoid failed shape guards / bailout loops, we should do the same in `CloneRegExpObject`.

I played around with `offThreadCompileScript` and friends for a while trying to replicate the problem in the shell, but I couldn't get a testcase to work. This fixes the browser issue, though.

Differential Revision: https://phabricator.services.mozilla.com/D109414